<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87C2ED"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvApresentacaoTabelaSimples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvApresentacaoTabelaSimples"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvTextoTabelaSimples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvTextoTabelaSimples" />

    <Button
        android:id="@+id/btTroca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btOK"/>
</LinearLayout>