<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#F8F8FF"
    android:onClick="trocarTela">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/unitins"
        android:id="@+id/imageView2"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:layout_marginBottom="249dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/twsobrepessoastitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="19dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:text="@string/twsobrepessoasorientadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="20dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/twsobrepessoasdesenvolvedores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="20dp"
        android:layout_below="@+id/tw_sobre_pessoas"
        android:layout_alignStart="@+id/tw_sobre_pessoas" />

    <TextView
        android:text="@string/twsobreuniversidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:id="@+id/tw_sobre"
        android:textStyle="bold"
        android:textColor="#0000FF"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/twsobrepessoastitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tw_sobre_pessoas"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@+id/tw_sobre"
        android:layout_alignStart="@+id/tw_sobre" />
</RelativeLayout>