<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87C2ED">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tvclasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twClass" />

        <TextView
            android:id="@+id/tvIntervalo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twIntervalo" />

        <TextView
            android:id="@+id/tvFreqSimples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twFreq" />

        <TextView
            android:id="@+id/tvFreqAcumulada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twFreqAcu" />

        <TextView
            android:id="@+id/tvFreqRelativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twFreqRel" />

        <TextView
            android:id="@+id/tvFreqRelAcumulada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/twFreqAcuRel" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/linearLayout"
        tools:ignore="RtlHardcoded">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="324dp"
            android:id="@+id/listViewItensTable"
            android:scrollbars="horizontal"
            android:gravity="center">
        </ListView>


    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="20dp"
        android:stretchColumns="0,1,2"
        android:gravity="center"
        android:id="@+id/tableLayout"
        tools:ignore="RtlHardcoded">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twmedia"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/twmediana" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/twmoda" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvResuMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:linksClickable="false"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:id="@+id/tvResuMediana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />

            <TextView
                android:id="@+id/tvResuModa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SpUsage" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="440dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="percentual"
            android:text="Percentil"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Graphic"
            android:text="Grafico"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

</RelativeLayout>